--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tlprt",
   "description": "Technologies teleporter",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Anton Winogradov <winogradovaa@gmai.com>",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "bem-walk": "^1.0.0-1",
     "fs-extra": "^0.30.0",
     "lodash": "^4.13.1",
+    "log-symbols": "^1.0.2",
     "stream-to-array": "^2.3.0",
     "xjst-ddsl": "^0.0.4"
   },
